...
        let addTaskButton = UIBarButtonItem(barButtonSystemItem: .add, target: self, action: #selector(showAddOptions))
        navigationItem.setRightBarButton(addTaskButton, animated: true)
    }
    
    @objc func showAddOptions() {
        let actionSheet = UIAlertController(title: nil, message: nil, preferredStyle: .actionSheet)
        let newNote = UIAlertAction(title: "Nova Anotação", style: .default) { (_) in
            self.showNoteModal()
        }
        let newTask = UIAlertAction(title: "Nova Tarefa", style: .default) { (_) in
            self.showTaskModal(index: nil, array: 0)
        }
        let cancel = UIAlertAction(title: "Cancelar", style: .cancel, handler: nil)
        actionSheet.addAction(newNote)
        actionSheet.addAction(newTask)
        actionSheet.addAction(cancel)        
...
