...
    
    func clearFields() {
        loginCard.passwordTextField.text = ""
        loginCard.passwordTextField.resignFirstResponder()
        loginCard.userTextField.text = ""
        loginCard.userTextField.resignFirstResponder()
        loginCard.loginButton.setTitle("Entrar", for: .normal)
        loginCard.loginButton.setImage(nil, for: .normal)
    }
    
}

