...
    let coursesTableView: UITableView = {
        let tbv = UITableView()
        tbv.translatesAutoresizingMaskIntoConstraints = false
        tbv.backgroundColor = .backgroundBlue
        tbv.separatorStyle = .none
        tbv.refreshControl = nil
        tbv.accessibilityIdentifier = "coursesList"
    
        return tbv
    }()
    
    lazy var bottomLineView: UIView = {
        let line = UIView()
...
